// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletConnection.vue [Extension available]: Accounts should be rendered 1`] = `
<s-card
  border-radius="medium"
  class="base"
  primary=""
  shadow="always"
  size="big"
>
   
  <div
    class="wallet-connection el-loading-parent--relative"
  >
    <p
      class="wallet-connection-text"
    >
      Select account to work with
    </p>
     
    <s-scrollbar-stub
      class="wallet-connection-accounts"
      tag="div"
    >
      <wallet-account-stub
        class="wallet-connection-account"
        polkadotaccount="[object Object]"
      />
      <wallet-account-stub
        class="wallet-connection-account"
        polkadotaccount="[object Object]"
      />
      <wallet-account-stub
        class="wallet-connection-account"
        polkadotaccount="[object Object]"
      />
      <wallet-account-stub
        class="wallet-connection-account"
        polkadotaccount="[object Object]"
      />
    </s-scrollbar-stub>
    <div
      class="el-loading-mask"
      style="display: none;"
    >
      <div
        class="el-loading-spinner"
      >
        <svg
          class="circular"
          viewBox="25 25 50 50"
        >
          <circle
            class="path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
          />
        </svg>
        <!---->
      </div>
    </div>
  </div>
</s-card>
`;

exports[`WalletConnection.vue [Extension available]: Connect account screen should be rendered 1`] = `
<s-card
  border-radius="medium"
  class="base"
  primary=""
  shadow="always"
  size="big"
>
   
  <div
    class="wallet-connection"
  >
    <p
      class="wallet-connection-text"
    >
      Connect your SORA Network accounts or create new ones with Polkadot.js browser extension. This extension allows you to securely sign transactions and manage assets in SORA Network.
    </p>
     
    <s-button-stub
      borderradius="small"
      class="wallet-connection-action s-typography-button--large action-btn"
      icon=""
      iconposition="left"
      nativetype="button"
      size="medium"
      tabindex="0"
      tooltip=""
      tooltipplacement="top"
      type="primary"
      usedesignsystem="true"
    >
      
          Connect account
        
    </s-button-stub>
     
    <s-button-stub
      borderradius="small"
      class="wallet-connection-action s-typography-button--large learn-more-btn"
      icon="question-circle-16"
      iconposition="right"
      nativetype="button"
      size="medium"
      tabindex="0"
      tooltip=""
      tooltipplacement="top"
      type="tertiary"
      usedesignsystem="true"
    >
      
          Learn more
        
    </s-button-stub>
  </div>
</s-card>
`;

exports[`WalletConnection.vue [Extension available]: Extensions should be rendered 1`] = `
<s-card
  border-radius="medium"
  class="base"
  primary=""
  shadow="always"
  size="big"
>
   
  <div
    class="wallet-connection el-loading-parent--relative"
  >
    <p
      class="wallet-connection-text"
    >
      Select a wallet to work with
    </p>
     
    <div
      class="wallet-connection-extensions"
    >
      <s-card
        borderradius="medium"
        class="wallet-account wallet-connection-extension"
        shadow="always"
        size="small"
      >
        <div
          class="account s-flex"
        >
          <div
            class="account-avatar"
          >
            <img
              alt="polkadot"
              src="/img/polkadot.svg"
            />
          </div>
           
          <div
            class="account-details s-flex"
          >
            <div
              class="account-credentials s-flex"
            >
              <div
                class="account-credentials_name"
              >
                Polkadot{.js}
              </div>
               
              <div
                class="account-credentials_description"
              />
            </div>
             
          </div>
        </div>
      </s-card>
      <s-card
        borderradius="medium"
        class="wallet-account wallet-connection-extension"
        shadow="always"
        size="small"
      >
        <div
          class="account s-flex"
        >
          <div
            class="account-avatar"
          >
            <img
              alt="subwallet"
              src="/img/subwallet.svg"
            />
          </div>
           
          <div
            class="account-details s-flex"
          >
            <div
              class="account-credentials s-flex"
            >
              <div
                class="account-credentials_name"
              >
                SubWallet
              </div>
               
              <div
                class="account-credentials_description"
              />
            </div>
             
            <a
              href="https://subwallet.org"
              rel="nofollow noopener noreferrer"
              target="_blank"
            >
              <s-button-stub
                borderradius="small"
                icon=""
                iconposition="left"
                nativetype="button"
                size="small"
                tabindex="0"
                tooltip=""
                tooltipplacement="top"
                type="secondary"
                usedesignsystem="true"
              >
                Install
              </s-button-stub>
            </a>
          </div>
        </div>
      </s-card>
    </div>
    <div
      class="el-loading-mask"
      style="display: none;"
    >
      <div
        class="el-loading-spinner"
      >
        <svg
          class="circular"
          viewBox="25 25 50 50"
        >
          <circle
            class="path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
          />
        </svg>
        <!---->
      </div>
    </div>
  </div>
</s-card>
`;

exports[`WalletConnection.vue [Extension available]: No accounts, refresh screen should be rendered 1`] = `
<s-card
  border-radius="medium"
  class="base"
  primary=""
  shadow="always"
  size="big"
>
   
  <div
    class="wallet-connection el-loading-parent--relative"
  >
    <p
      class="wallet-connection-text"
    >
      No account found in your Polkadot.js browser extension. Please add an account and try again.
    </p>
     
    <s-button-stub
      borderradius="small"
      class="wallet-connection-action s-typography-button--large action-btn"
      icon=""
      iconposition="left"
      nativetype="button"
      size="medium"
      tabindex="0"
      tooltip=""
      tooltipplacement="top"
      type="primary"
      usedesignsystem="true"
    >
      
          Refresh
        
    </s-button-stub>
     
    <s-button-stub
      borderradius="small"
      class="wallet-connection-action s-typography-button--large learn-more-btn"
      icon="question-circle-16"
      iconposition="right"
      nativetype="button"
      size="medium"
      tabindex="0"
      tooltip=""
      tooltipplacement="top"
      type="tertiary"
      usedesignsystem="true"
    >
      
          Learn more
        
    </s-button-stub>
    <div
      class="el-loading-mask"
      style="display: none;"
    >
      <div
        class="el-loading-spinner"
      >
        <svg
          class="circular"
          viewBox="25 25 50 50"
        >
          <circle
            class="path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
          />
        </svg>
        <!---->
      </div>
    </div>
  </div>
</s-card>
`;
